fix video visibilty issues

--- a/public/css/replayer.css
+++ b/public/css/replayer.css
@@ -11045,9 +11045,9 @@ fieldset[disabled] .button:hover {
  **************************************************************
 */
 .button .icon.rotate {
-  -moz-transition: all 0.3s linear;
-  -webkit-transition: all 0.3s linear;
-  transition: all 0.3s linear;
+  -moz-transition: all 300ms linear;
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear;
 }
 .button .icon.rotate.right {
   -ms-transform: rotate(-90deg);
@@ -11721,7 +11721,7 @@ for all screen sizes. Keeps the display compact */
 .list-move,
 .list-enter-active,
 .list-leave-active {
-  transition: all 0.3s ease;
+  transition: all 300ms ease;
 }
 
 /** **********************************************************
@@ -11778,7 +11778,7 @@ for all screen sizes. Keeps the display compact */
  to keep the background non-fading */
 .slide-fade-left-leave-to nav {
   opacity: 0;
-  transition: all 0.3s ease;
+  transition: all 300ms ease;
 }
 
 .slide-fade-left-enter-from {
@@ -11796,7 +11796,7 @@ for all screen sizes. Keeps the display compact */
  to keep the background non-fading */
 .slide-fade-right-leave-to nav {
   opacity: 0;
-  transition: all 0.3s ease;
+  transition: all 300ms ease;
 }
 
 .slide-fade-right-enter-from {
