--- a/sass/_replayer-button.scss
+++ b/sass/_replayer-button.scss
@@ -74,9 +74,9 @@ fieldset[disabled] .button:hover {
 */
 
 .button .icon.rotate {
-    -moz-transition: all 0.3s linear;
-    -webkit-transition: all 0.3s linear;
-    transition: all 0.3s linear;
+    -moz-transition: all $replayer-transition-duration linear;
+    -webkit-transition: all $replayer-transition-duration linear;
+    transition: all $replayer-transition-duration linear;
 
     &.right {
         -ms-transform: rotate(-90deg);
